src/pmt/css/PreferencesManagementTool.css
/*
	Font icons
*/
@font-face {
	font-family: 'icons-no-frames-aug-29';
	src:url('../fonts/icons-no-frames-aug-29.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'font-icons-sept-3';
	src:url('../fonts/font-icons-sept-3.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'sept-12';
	src:url('../fonts/sept-12.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}

/*
	General preferences styling
*/

body {
	transform-origin: 0 0 0;
	-webkit-transform-origin: 0 0 0;
}

.preference {
	background:#ECEFEF;
	width: 340px;
	min-height: 100px;
}

.fl-uiOptions-category {
    width: 80%;
    margin: 0 auto;
    font-family: 'Open Sans', sans-serif;
}

.fl-uiOptions label::first-letter {
    text-transform: capitalize;
}

.fl-uiOptions label {
    font-size: 0.8em;
}

.fl-uiOptions-fullPreview h2 {
	display: table-cell !important;
    text-transform: none !important;
}

/*
	Header's styling
*/
.headerImage {
	-webkit-font-smoothing: antialiased;
	width: 330;
   	height:90;
   	margin-top: 4px !important;
	margin:5px;
    cursor:default;
	font-size: 90px !important;
	color: #566374;
	background-color: white;
}

.headerImage {
	color: white;
	background-color: #566374;	
}

.headerImageTick {
	font-size: 20px !important;
    margin-left: 300px;
    margin-top: 60px;
    position: absolute;
    background-color: white;
    border-radius: 50%;
    padding: 2px;
    color: #566374;
}

.headerImageTick:before {
	content: "\e00a" !important;
}

input[type=checkbox] ~ .headerImageTick{
	display: none;
}

input[type=checkbox]:checked ~ .headerImageTick{
	display: block;
}

input[type=checkbox] + .headerImage:before {
	content: "\e003";
}

.adjusterGroupTitle {
	margin: 5px;
}

.headerTitle {
	font-family: 'Roboto Slab', serif;
	//position: absolute; 
   	//top: 20px; 
   	left: 0; 
   	width: 100%;
   	color: white;
   	text-align: center;
}

input[type=checkbox], input[type=radio] {
    position: absolute;
    display: none;
    clip: rect(0 0 0 0);
    height:1px;
    width:1px;
    margin:-1px;
    padding:0;
    border:0;
}

input[type=checkbox] + .headerImage + label.headerTitle {
    //background: url('../images/increaseSizeHeader.png') no-repeat;
    background-size:330px 90px;
    //padding-left:30px;
    cursor:pointer;
    margin: 5px;
    margin-top: -95px;
    font-size: 1.5em;
    text-align: center;
    //padding-left: 3px;
    color:white;
    display:inline-block;
    line-height:90px;
    height: 90px;
    width:330px;
}

input[type=checkbox]:checked + .headerImage + label.headerTitle {
    //background: url('../images/increaseSizeHeaderChecked.png') no-repeat;
    background-size:330px 90px;
    //padding-left:30px;
    cursor:pointer;
    margin: 5px;
    margin-top: -95px;
	font-size: 1.5em;
    text-align: center;
    //padding-left: 3px;
    color:white;
    display:inline-block;
    line-height:90px;
    height: 90px;
    width:330px;
}

/*
	The adjusters' font icons
*/
.fl-adjuster-icons {
	float: left;
	font-family: 'icons-no-frames-aug-29';
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-variant: normal;
	text-transform: none;
	line-height: 1;
	-webkit-font-smoothing: antialiased;
}

.fl-adjuster-icons-additional > .fl-magnifierPosition-uio-icon-main {
	font-family: 'font-icons-sept-3';
	margin-top: 0em;
}

.fl-icon-small-cursor:before {
	font-size: 0.8em !important;
	content: "\e000";
}
.fl-icon-big-cursor:before {
	font-size: 1.9em !important;
	content: "\e000";
}
.fl-icon-small-cursor {
	width: 30px;
	text-align: right;
	padding-top: 0.25em;
}
.fl-icon-big-cursor {
	width: 35px;
	margin-top: -0.5em !important;
}

/*
	The slider's style
*/
.fl-uiOptions .fl-slider-horz {
    width: 200px;
    margin: 2px !important;
}

.fl-uiOptions .fl-slider a {
    //background: radial-gradient(circle 14.5px at 14.5px 50%, #566374 6px, white 8px);
    border: 1px solid #566374;
}

.fl-uiOptions .ui-slider-range {
    background-color: #17a9b8;
}

.fl-uiOptions .fl-slider a {
    box-shadow: none;
}

/*
	The plusMinusAdjuster style
*/
.flc-uiOptions-plus-minus-numerical-minus, .flc-uiOptions-plus-minus-numerical-plus {
	width: 10% !important;
	//height: 2em !important;
	font-size: 1.5em !important;
	cursor: pointer;
	text-align: center !important;
	background-color: white;
	margin-left: 2px !important;
	margin-right: 2px !important;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-o-user-select: none;
	user-select: none;
	padding-top: 0.05em;
}

.flc-uiOptions-plus-minus-numerical-widget {
	width: 100% !important;
	background-color: #FFFFFF;
	display: table;
    //height: 2em;
}

.flc-uiOptions-plus-minus-numerical-value {
	width: 76% !important;
	border: none !important;
	//height: 2em !important;
	text-align: center !important;
	font-size: 1.5em !important;
}

/*
	Style for sliding to work
*/
.increaseSizePreferenceGroup {
	padding-top: 100px;
}

.fl-uiOptions-category {
	overflow: hidden;
}

.fl-uiOptions-category-hidden {
	overflow: hidden;
}

/*
	Style for more/less
*/
.moreLess{
	width:100% !important;
	text-align: center;
	cursor: pointer;
	padding-bottom: 5px !important;
}

/*
	Style for magnifier position font icons
*/
.fl-magnifierPosition-uio-icon-label {
	height: 4.7em !important;
	width: 6.3em !important;
	border: none !important;
	padding: 0 !important;
	cursor: pointer;
	background-color: white;
	margin-bottom: 0.5em !important;
	margin-right: 0.5em !important;
}

.fl-magnifierPosition-uio-icon {
	height: 0 !important;
	width: 0 !important;
	color: #636c7c;
	margin-top: -2px;
}

.fl-magnifierPosition-uio-icon:before {
	font-size: 5em !important;
}

.fl-magnifierPosition-uio-background {
	height: 4.9em !important;
	width: 6.3em !important;
	padding-top: 2px;
}

.fl-magnifierPosition-uio-background:before {
	font-size: 4.8em !important;
	content: "\e00b" !important;
}
/* ... */

